--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LearnRouter</title>
+  <title>ImgHub</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image" href="https://ui-avatars.com/api/?background=fff&name=H&font-size=0.5&bold=true&rounded=1">
 </head>
 <body>
   <app-root></app-root>
